chat: fix chat input border on dark mode safari
Also rewrites the container in indigo-react.

--- a/pkg/interface/src/views/apps/chat/css/custom.css
+++ b/pkg/interface/src/views/apps/chat/css/custom.css
@@ -387,7 +387,6 @@ pre.CodeMirror-placeholder.CodeMirror-line-like { color: var(--gray); }
   /* codemirror */
   .chat .cm-s-tlon.CodeMirror {
     color: #fff;
-    font-size: 14px;
   }
 
   .chat .cm-s-tlon span.cm-def {
